fix: add align-items to container inner

--- a/src/qComponents/QDatePicker/src/q-date-picker.scss
+++ b/src/qComponents/QDatePicker/src/q-date-picker.scss
@@ -125,6 +125,7 @@
     .q-dialog-container__inner {
       display: flex;
       flex-direction: column;
+      align-items: center;
       justify-content: flex-end;
       .q-mobile-panel-close {
         position: absolute;
